--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -1,3 +1,5 @@
+{{jekyll.environment == "production" }}
+{{page.comments != false}}
 {% if page.comments != false and jekyll.environment == "production" %}
   <div id="disqus_thread"></div>
   <script>
