--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -1,5 +1,5 @@
-{{jekyll.environment }}
-{{page}}
+
+{{page.comments}}
 {% if page.comments != false and jekyll.environment == "production" %}
   <div id="disqus_thread"></div>
   <script>
