--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,6 @@
 layout: default
 ---
 <article class="post">
-this is post
   <header class="post-header">
     <h1 class="post-title">{{ page.title | escape }}</h1>
   </header>
@@ -12,3 +11,6 @@ this is post
   </div>
 
 </article>
+  {% if site.disqus.shortname %}
+    {% include disqus_comments.html %}
+  {% endif %}
