--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -1,8 +1,7 @@
-123
 {{page.comments}}
-123
 {% if page.comments != false and jekyll.environment == "production" %}
-  <div id="disqus_thread"></div>
+  <div id="disqus_thread">fsafsdf</div>
+  sadfsadf
   <script>
     var disqus_config = function () {
       this.page.url = 'https://baipu.github.io{{ page.url  }}';
