--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -1,7 +1,6 @@
-{{page.comments}}
+
 {% if page.comments != false and jekyll.environment == "production" %}
-  <div id="disqus_thread">fsafsdf</div>
-  sadfsadf
+  <div id="disqus_thread"></div>
   <script>
     var disqus_config = function () {
       this.page.url = 'https://baipu.github.io{{ page.url  }}';
